Revision history for Directory-Scratch

0.15    13 April 2013
        * Remove test for Classic Mac, fixing RT#83318

0.14    8 June 2008
        * remove auto_install and update Module::Install

0.13    19 October 2007
        * add "chmod" and "stat" commands

0.12    25 January 2007
        * fix non-hard-coded '/' for Win32 users CORRECTLY; it
	  really works now, I promise!
        * add create_tree for quickly creating directory trees

0.11	27 December 2006
	* add environment variable to suppress auto-cleanup
	* fix hard-coded '/' for Win32 users

0.10    9 December 2006
	* up File::Slurp dependency to 9999.12, required for AS/Win32
	* increase test coverage
	* fix bug where a platform argument to new() is ignored

0.09    14 Septemeber 2006
        * decided to go back to File::Slurp
        * decided to croak if String::Random isn't installed
        * using Path::Class internally
        * added option to make UNIX paths Just Work on non-UNIX systems
          (perl has this already, but this converts to the right format
           internally, so that debugging messags make sense also)
        * actually works on Win32 now

0.08	3 September 2006
	More cleanups:
	 * clone => child
	 * binmode
	 * stringify
	doc fixes

0.06    22 August 2006
        Applied a patch (#21120) from TOBEYA.  API has changed a bit,
        but it's for the better.

0.05    7 August 2006
        Removed some debugging code that shouldn't have been pushed to
        CPAN :)

0.04	7 August 2006
	Added list, exists, read, write, append, and link; and lots
	more tests.

0.03    17 July 2006
	Fixed an even sillier bug: touch(@lines) didn't work because
	the touch looked like my @lines, not my @lines = @_; !!!
	Added a test for this

0.02    3 July 2006
	Fixed a silly bug: mkdir('a'); mkdir('a/b'); would fail because
	      	      	   a already existed.

0.01    2 July 2006
        First version, released on an unsuspecting world.
