@@ -1,10 +1,6 @@
-META.yml
-Makefile
-Directory-Scratch-*
-blib
-inc
-pm_to_blib
-cover_db
-MANIFEST.bak
-MYMETA.json
-MYMETA.yml
+/.ackrc
+/.build/
+!/.gitignore
+/.latest
+/Directory-Scratch-*/
+/Directory-Scratch-*.tar.gz
