@@ -1,55 +1,0 @@
-.gitignore
-Changes
-examples/basic.pl
-inc/Module/Install.pm
-inc/Module/Install/Authority.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/Directory/Scratch.pm
-Makefile.PL
-MANIFEST			This list of files
-MANIFEST.SKIP
-META.yml
-README
-t/00-load.t
-t/developer/boilerplate.t
-t/developer/pod-coverage.t
-t/developer/pod.t
-t/integration/01-parents_too.t
-t/integration/01-scratch.t
-t/integration/02-nesting.t
-t/integration/03-list.t
-t/integration/04-links.t
-t/integration/05-readwrite.t
-t/integration/06-append-prepend.t
-t/integration/07-delete.t
-t/integration/08-exists.t
-t/integration/09-clone_object.t
-t/integration/10-new-with-arguments.t
-t/integration/11-cleanup.t
-t/integration/11-stringify.t
-t/integration/12-randfile.t
-t/integration/other_output_seperator.t
-t/os/win32.t
-t/unit/append.t
-t/unit/chmod.t
-t/unit/cleanup.t
-t/unit/create_tree.t
-t/unit/delete.t
-t/unit/invalid_clone.t
-t/unit/invalid_directory.t
-t/unit/link.t
-t/unit/ls.t
-t/unit/mkdir.t
-t/unit/openfile.t
-t/unit/randfile.t
-t/unit/read.t
-t/unit/stat.t
-t/unit/tempfile.t
-t/unit/touch.t
-t/unit/write.t
