@@ -1,10 +1,0 @@
-Directory-Scratch-*
-MYMETA.*
-.git/
-blib
-pm_to_blib
-MANIFEST.bak
-MANIFEST.SKIP~
-cover_db
-Makefile$
-Makefile.old$
