@@ -1,43 +1,0 @@
-Directory-Scratch
-
-Directory::Scratch creates a scratch space for your application to
-(portably) manipulate files.  Designed for testing File::* modules,
-but may be useful elsewhere.
-
-INSTALLATION
-
-To install this module, run the following commands:
-
-    perl Makefile.PL
-    make
-    make test
-    make install
-
-If make test fails, don't install the module.  File a bug report instead.
-
-SUPPORT AND DOCUMENTATION
-
-After installing, you can find documentation for this module with the perldoc command.
-
-    perldoc Directory::Scratch
-
-You can also look for information at:
-
-    Search CPAN
-        http://search.cpan.org/dist/Directory-Scratch
-
-    CPAN Request Tracker:
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Directory-Scratch
-
-    AnnoCPAN, annotated CPAN documentation:
-        http://annocpan.org/dist/Directory-Scratch
-
-    CPAN Ratings:
-        http://cpanratings.perl.org/d/Directory-Scratch
-
-COPYRIGHT AND LICENCE
-
-Copyright (C) 2006 Jonathan Rockway
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
