@@ -1,0 +1,17 @@
+name        = Directory-Scratch
+author      = Jonathan Rockway <jrockway@cpan.org>
+license     = Perl_5
+copyright_holder = Jonathan Rockway
+copyright_year = 2006
+
+[PodVersion]
+
+[@Author::ETHER]
+:version = 0.068
+Authority.authority = cpan:JROCKWAY
+Git::GatherDir.exclude_filename[] = ; first release only; @Author::ETHER hazabug :(
+-remove = PodWeaver
+-remove = Test::PodSpelling
+-remove = Test::CPAN::Changes
+-remove = Test::NoTabs
+-remove = Test::EOL
