@@ -1,4 +1,7 @@
-Revision history for Directory-Scratch
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+        - convert to Dist::Zilla, with more metadata
 
 0.15    13 April 2013
         * Remove test for Classic Mac, fixing RT#83318
